--- a/user-service-manager/src/main/resources/application-dev.yaml
+++ b/user-service-manager/src/main/resources/application-dev.yaml
@@ -5,7 +5,7 @@ spring:
     url: jdbc:oracle:thin:@152.136.149.175:1521/orcl
     driver-class-name: oracle.jdbc.OracleDriver
   redis:
-    host: localhost
+    host: 39.98.163.144
     port: 6379
     #    sentinel:
     #      master: mymaster
