拦截器登录验证

--- a/user-service-client/src/main/resources/application-dev.yaml
+++ b/user-service-client/src/main/resources/application-dev.yaml
@@ -12,6 +12,8 @@ spring:
         max-idle: 10
         min-idle: 5
         max-wait: 5000
+url:
+  login: http://www.baidu.com
 
 user-manager:
   ip: 127.0.0.1
