--- a/user-service-manager/src/main/resources/application-dev.yaml
+++ b/user-service-manager/src/main/resources/application-dev.yaml
@@ -7,6 +7,7 @@ spring:
   redis:
     host: 39.98.163.144
     port: 6379
+    timeout: 5000
     #    sentinel:
     #      master: mymaster
     #      nodes: redisapp01:26379,redisapp02:26379,redisapp03:26379
